# gecko_bot

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.cfg
bot/: config.py  main.py
bot/handlers/: client.py  handlers.py  help_command.py  misc.py
fastapi/: Dockerfile  config.py  main.py
fastapi/models/: __init__.py  exceptions.py  misc.py  models.py  repository.py
fastapi/mongodb/: mongodb.py
fastapi/routers/: other.py  pairs.py  users.py
fastapi_app/: Dockerfile  config.py  main.py
fastapi_app/models/: __init__.py  exc.py  misc.py  models.py  repository.py
fastapi_app/mongodb/: __init__.py  mongodb.py
fastapi_app/routers/: other.py  pairs.py  users.py
fastapi_app/tests/: test_healthcheck.py  test_users.py
mlflow/: Dockerfile  entrypoint.sh
mlflow_client/: Dockerfile  config.py  main.py
mlflow_client/routers/: misc.py  proph.py
nginx/: nginx.conf
notebooks/: Untitled.ipynb  gecko_coin_API.ipynb
notebooks/.ipynb_checkpoints/: gecko_coin_API-checkpoint.ipynb
scheduler/: Dockerfile  config.py  main.py
scheduler/tasks/: tasks.py
tests/test_fastapi/: test_endpoint.py
tests/test_handlers/: test_start.py
