[tool.poetry]
name = "gecko-bot"
version = "0.1.0"
description = "Telegram Bot for crypto stuff."
authors = ["averagepythonfan <djonvorobei@bk.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"


[tool.poetry.group.fastapi.dependencies]
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
aiohttp = "^3.8.4"
pymongo = "^4.3.3"
motor = "^3.1.2"
seaborn = "^0.12.2"
aioredis = "^2.0.1"


[tool.poetry.group.bot.dependencies]
aiogram = "3.0.0b7"


[tool.poetry.group.dev.dependencies]
setuptools = "^67.7.2"
httpx = "^0.24.0"


[tool.poetry.group.mlflow_client.dependencies]
mlflow = "^2.3.1"
prophet = "^1.1.2"
statsmodels = "^0.14.0"
fastapi = "^0.95.1"
uvicorn = "0.21.1"
pandas = "^2.0.1"


[tool.poetry.group.scheduler.dependencies]
schedule = "^1.2.0"
requests = "^2.30.0"

[tool.pytest.ini_options]
pythonpath = [
  ".", "fastapi_app",
]
asyncio_mode="auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
